--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+/* global settings */
+
 * {
     margin: 0;
     padding: 0;
@@ -5,11 +7,15 @@
     font-family: Verdana;
 }
 
+/* variables */
+
 :root {
     --first-main-brand-color: rgb(0, 89, 255);
     --second-main-brand-color:  rgb(124, 7, 192);
     --third-main-brand-color: #0400ff;
 }
+
+/* brand colors */
 
 .brand-color-1 {
     color: var(--first-main-brand-color);
@@ -35,3 +41,25 @@
     background-color: var(--third-main-brand-color);
 }
 
+/* custom scrollbar */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px whitesmoke;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: var(--first-main-brand-color);
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: var(--first-main-brand-color);
+}
+html {
+    scrollbar-color: var(--first-main-brand-color) whitesmoke;
+    scrollbar-width: thin;
+}
