--- a/css/styles.css
+++ b/css/styles.css
@@ -1,67 +1,272 @@
 /* global settings */
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Verdana;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Verdana;
 }
+
+input{
+  border: none;
+  outline: none;
+}
+
+/** end global settings */
 
 /* variables */
 
 :root {
-    --first-brand-color: #02DAFF;
-    --second-brand-color:  #FF9331;
-    --third-brand-color: #D6B3F7;
-    --fourth-brand-color: #0400ff;
-    --fifth-brand-color: #7c07c0;
+  --first-brand-color: #02DAFF;
+  --second-brand-color:  #FF9331;
+  --third-brand-color: #D6B3F7;
+  --fourth-brand-color: #0400ff;
+  --fifth-brand-color: #7c07c0;
 }
+
+/* end variables */
 
 /* brand colors */
 
 .brand-color-1 {
-    color: var(--first-brand-color);
+  color: var(--first-brand-color);
 }
 
 .bg-brand-color-1 {
-    background-color: var(--first-brand-color);
+  background-color: var(--first-brand-color);
 }
 
 .brand-color-2 {
-    color: var(--second-brand-color);
+  color: var(--second-brand-color);
 }
 
 .bg-brand-color-2 {
-    background-color: var(--second-brand-color);
+  background-color: var(--second-brand-color);
 }
 
 .brand-color-3 {
-    color: var(--third-brand-color);
+  color: var(--third-brand-color);
 }
 
 .bg-brand-color-3 {
-    background-color: var(--third-brand-color);
+  background-color: var(--third-brand-color);
 }
 
+.brand-color-4 {
+  color: var(--fourth-brand-color);
+}
+
+.bg-brand-color-4 {
+  background-color: var(--fourth-brand-color);
+}
+
+.brand-color-5 {
+  color: var(--fifth-brand-color);
+}
+
+.bg-brand-color-5 {
+  background-color: var(--fifth-brand-color);
+}
+
+/* end brand colors */
+
 /* custom scrollbar */
+
 ::-webkit-scrollbar {
-    width: 10px;
+  width: 10px;
 }
 
 ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px whitesmoke;
-    border-radius: 10px;
+  box-shadow: inset 0 0 5px whitesmoke;
+  border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
-    background: var(--first-brand-color);
-    border-radius: 10px;
+  background: var(--fourth-brand-color);
+  border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: var(--first-brand-color);
+  background: var(--fourth-brand-color);
 }
+
 html {
-    scrollbar-color: var(--first-brand-color) whitesmoke;
-    scrollbar-width: thin;
+  scrollbar-color: var(--fourth-brand-color) whitesmoke;
+  scrollbar-width: thin;
 }
+
+/* end custom scrollbar */
+
+/* footer */
+
+footer{
+  position: fixed;
+  bottom: 0px;
+  width: 100%;
+  background: var(--first-brand-color);
+}
+
+.footer-main{
+  display: flex;
+}
+
+.footer-main .footer-box{
+  flex-basis: 50%;
+  padding: 20px 15px;
+}
+
+.footer-box h2{
+  font-size: 1rem;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+
+.footer-box .content{
+  margin: 20px 0 0 0;
+  position: relative;
+}
+
+.footer-box .content:before{
+  position: absolute;
+  content: '';
+  top: -10px;
+  height: 1px;
+  width: 100%;
+  background: black;
+}
+
+.footer-box .content:after{
+  position: absolute;
+  content: '';
+  height: 1px;
+  width: 15%;
+  background: var(--second-brand-color);
+  top: -10px;
+}
+
+.footer-left .content p{
+  text-align: justify;
+}
+
+.footer-left .content .pages a{
+  text-decoration: none;
+  color: black;
+  font-size: 0.8rem;
+}
+
+.footer-left .content .pages a:hover{
+  text-decoration: underline;
+  color: var(--fourth-brand-color);
+}
+
+.footer-left .content .social{
+  display: flex;
+  justify-content: space-evenly;
+  margin: 20px 0 0 0;
+}
+
+.footer-left .content .social a{
+  padding: 0 2px;
+}
+
+.footer-left .content .social a span{
+  height: 40px;
+  width: 40px;
+  background: var(--third-brand-color);
+  line-height: 40px;
+  text-align: center;
+  font-size: 18px;
+  border-radius: 5px;
+  transition: 0.3s;
+}
+
+.footer-left .content .social a span:hover{
+  background: var(--second-brand-color);
+}
+
+.footer-center .content .fas{
+  font-size: 1.4375rem;
+  background: var(--third-brand-color);
+  height: 45px;
+  width: 45px;
+  line-height: 45px;
+  text-align: center;
+  border-radius: 50%;
+  transition: 0.3s;
+  cursor: pointer;
+}
+
+.footer-center .content .fas:hover{
+  background: var(--second-brand-color);
+}
+
+.footer-center .content .text{
+  font-size: 0.8rem;
+  padding-left: 10px;
+}
+
+.footer-center .content .text a{
+  text-decoration: none;
+  color: black;
+  font-size: 0.8rem;
+}
+
+.footer-center .content .text a:hover{
+  text-decoration: underline;
+  color: var(--fourth-brand-color);
+}
+
+.footer-center .content .phone{
+  margin: 15px 0;
+}
+
+.footer-right .content form input{
+  margin-top: 10px;
+}
+
+.footer-right .content form .btn{
+  margin-top: 20px;
+}
+
+.footer-right .content p{
+  font-size: 0.8rem;
+}
+
+.footer-right .content form label{
+  font-size: 0.7rem;
+}
+
+.footer-bottom{
+  padding: 5px;
+  font-size: 0.7rem;
+  background: black;
+  text-align: center;
+}
+
+.footer-bottom span{
+  color: lightgray;
+}
+
+@media screen and (max-width: 900px) {
+  footer{
+    position: relative;
+    bottom: 0px;
+  }
+  
+  .footer-main{
+    flex-wrap: wrap;
+    flex-direction: column;
+  }
+  
+  .footer-main .footer-box{
+    margin: 15px 0;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .footer-main .footer-box{
+    margin: 5px 0;
+  }
+}
+
+/* end footer */
