--- a/css/styles.css
+++ b/css/styles.css
@@ -687,3 +687,149 @@ header, .navbar{
 }
 
 /* end contacto /*
+
+/*Tarjeta flor*/
+
+.contenedorgrid{
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  grid-template-rows: auto auto;
+ }
+
+ .principal{/*Contenedor Principal*/
+  background-color: #e9def3;
+  width: 330px;
+  height: 875px;
+  border: 1px solid white;
+  
+}
+
+.imagen1{
+ background-color: white;
+ width: 250px;
+ height: 275px;
+ margin-top: 15px;
+ margin-left: 50px;
+ background-image: url(/img/Tarjetas/Perros/Blanquita.jpg);
+ background-size: cover;
+ border: 10px solid white ;
+ border-radius: 50%;
+}
+
+.imagen2{
+  background-color: white;
+  width: 250px;
+  height: 250px;
+  margin-top: 15px;
+  margin-left: 50px;
+  background-image: url(/img/Tarjetas/Perros/Edén.jpg);
+  background-size: cover;
+  border: 10px solid white ;
+  border-radius: 50%;
+ }
+
+ .imagen3{
+  background-color: white;
+  width: 250px;
+  height: 250px;
+  margin-top: 15px;
+  margin-left: 50px;
+  background-image: url(/img/Tarjetas/Perros/Facundo2.jpg);
+  background-size: cover;
+  border: 10px solid white ;
+  border-radius: 50%;
+ }
+
+ .imagen4{
+  background-color: white;
+  width: 250px;
+  height: 250px;
+  margin-top: 15px;
+  margin-left: 50px;
+  background-image: url(/img/Tarjetas/Perros/lucero2.webp);
+  background-size: cover;
+  border: 10px solid white ;
+  border-radius: 50%;
+ }
+
+ .imagen5{
+  background-color: white;
+  width: 250px;
+  height: 250px;
+  margin-top: 15px;
+  margin-left: 50px;
+  margin-right: 50px;
+  background-image: url(/img/Tarjetas/Perros/Malevo.jpg);
+  background-size: cover;
+  border: 10px solid white ;
+  border-radius: 50%;
+ }
+
+ .imagen6{
+  background-color: white;
+  width: 250px;
+  height: 250px;
+  margin-top: 15px;
+  margin-left: 50px;
+  background-image: url(/img/Tarjetas/Perros/Rolo.jpg);
+  background-size: cover;
+  border: 10px solid white ;
+  border-radius: 50%;
+ }
+
+ .imagen7{
+  background-color: white;
+  width: 250px;
+  height: 250px;
+  margin-top: 15px;
+  margin-left: 20px;
+  margin-right: 30px;
+
+  background-image: url(/img/Tarjetas/Perros/silva3.jpeg);
+  background-size: cover;
+  border: 10px solid white ;
+  border-radius: 50%;
+ }
+
+ .imagen8{
+  background-color: white;
+  width: 250px;
+  height: 250px;
+  margin-top: 15px;
+  margin-left: 50px;
+  background-image: url(/img/Tarjetas/Perros/Terra.jpg);
+  background-size: cover;
+  border: 10px solid white ;
+  border-radius: 50%;
+ }
+
+
+h1{
+ text-align: center;
+}
+
+
+p{
+  text-align: center;
+}
+
+.primertitle{
+  color: gray;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.adoptame{
+  text-align: center;
+}
+
+.textocontenedor{
+  width: 300px;
+  margin-left: 20px;
+
+}
+
+.centrar{
+  margin-left: 110px;
+}
+
