--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,8 @@ input{
   --third-brand-color: #D6B3F7;
   --fourth-brand-color: #0400ff;
   --fifth-brand-color: #7c07c0;
+  --sixth-brand-color: #ff91ed;
+  --seventh-brand-color: #ffec43;
 }
 
 /* end variables */
@@ -68,6 +70,22 @@ input{
   background-color: var(--fifth-brand-color);
 }
 
+.brand-color-6 {
+  color: var(--sixth-brand-color);
+}
+
+.bg-brand-color-6 {
+  background-color: var(--sixth-brand-color);
+}
+
+.brand-color-7 {
+  color: var(--seventh-brand-color);
+}
+
+.bg-brand-color-7 {
+  background-color: var(--seventh-brand-color);
+}
+
 /* end brand colors */
 
 /* custom scrollbar */
@@ -109,7 +127,7 @@ html {
   text-transform: uppercase;
   font-weight: bolder;
   font-size: 2rem;
-  margin: 15px;
+  margin: 30px;
 }
 
 .section-title{
@@ -757,6 +775,103 @@ header, .navbar{
 
 /* faq */
 
+.qa {
+  margin: 2%;
+  border: solid 1px var(--fifth-brand-color);
+  padding: 2.5%;
+  background-color: var(--third-brand-color);
+}
+
+.question{
+  font-weight: bold;
+  margin-bottom: 2%
+}
+
+.answer{
+  font-style: italic;
+}
+
+.content-center{
+  text-align: center;
+}
+
+.confusos-img{
+  object-fit: cover;
+  border-radius: 10%;
+  margin-top: 2.5%;
+  margin-bottom: 2.5%;
+}
+
+.faq{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+
+.faq-questions{
+  background-color: var(--sixth-brand-color);
+  width: 68%;
+  margin-right: 2%;
+}
+
+.faq aside {
+  background-color: var(--seventh-brand-color);
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  padding-top: 2%;
+  padding-bottom: 2%;
+}
+
+.confusos-img-hidden-1, .confusos-img-hidden-2{
+  display: none;
+}
+
+.confusos-img-small{
+  display: none;
+}
+
+@media screen and (max-width: 1200px) {
+
+  .confusos-img-hidden-1 {
+    display: block;
+  }
+
+}
+
+@media screen and (max-width: 1000px) {
+  
+  .confusos-img-hidden-2{
+    display: block;
+  }
+  
+}
+
+@media screen and (max-width: 800px) {
+  
+  .faq aside {
+    display: none;
+  }
+
+  .faq-questions{
+    width: 100%;
+    margin-right: 0%;
+  }
+
+  .qa{
+    margin: 4% 2%;
+    padding: 4%;
+  }
+
+  .confusos-img-small{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+  }
+  
+}
 
 
 /* end faq */
