--- a/css/styles.css
+++ b/css/styles.css
@@ -542,8 +542,9 @@ header, .navbar{
   color: whitesmoke;
 }
 
-.tab-content div{
+.tab-content .form{
   display: none;
+  overflow:hidden
 }
 
 .tab-content .working{
@@ -616,7 +617,7 @@ header, .navbar{
   margin-left: 0;
 }
 
-.field input[type="submit"], input[type="reset"]{
+.field button[type="submit"], button[type="reset"]{
   padding: 0.5em;
   border-radius: 4%;
   background-color: var(--first-brand-color);
@@ -626,24 +627,108 @@ header, .navbar{
   font-weight: 600;
   width: 100%;
   margin-top: 0.6em;
+  height: 2em;
+  border: none;
 }
-
-.field #button:hover{
+.field button[type="submit"]{
+  margin-bottom: 0.5em;
+}
+.field input:focus{
+  border: 3px solid var(--fourth-brand-color);
+  outline: none;
+}
+/*saca la ruedita del imput numero en el navegador Chrome, Safari, Edge y Opera */
+.field input::-webkit-outer-spin-button,
+.field input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+/*saca la ruedita del imput numero en el navegador Firefox */
+.field input[type=number] {
+  -moz-appearance: textfield;
+}
+.field button:hover{
   background-color: var(--second-brand-color);
 }
 
 /*estilizacion de los mensajes de errores*/
-.field span{
-  position: absolute;
-  bottom: 12px;
-  right: 17px;
-  font-size:14px;
-  color: red;
+.formulario__grupo-input,
+.consulta__grupo-input {
+  position: relative;
 }
 
-.field span i {
-  color: seagreen;
+.formulario__input-error,
+.consulta__input-error{
+  font-size: 12px;
+  margin-bottom: 0;
+  display: none;
 }
+.formulario__input-error-activo,
+.consulta__input-error-activo{
+  display: block;
+}
+.formulario__validacion-estado,
+.consulta__validacion-estado{
+  position: absolute;
+  right: 5px;
+  bottom: 9px;
+  font-size: 16px;
+  opacity: 0;
+}
+
+.formulario__mensaje,
+.consulta__mensaje{
+  height: 30px;
+  line-height: 30px;
+  background: #F66860;
+  border-radius: 3px;
+  padding: 0 2px;
+  display: none;
+}
+
+.formulario__mensaje-activo,
+.consulta__mensaje-activo{
+  display: block;
+}
+
+.formulario__mensaje p,
+.consulta__mensaje p{
+  margin: 0;
+  font-size: 13px;
+}
+
+.formulario__mensaje-exito,
+.consulta__mensaje-exito{
+  font-size: 14px;
+  background-color: #119200;
+  border-radius: 3px;
+  padding: 0 5px;
+  display: none;
+}
+
+.formulario__mensaje-exito-activo,
+.consulta__mensaje-exito-activo{
+  display: block;
+}
+
+.formulario__grupo-correcto .formulario__validacion-estado,
+.consulta__grupo-correcto .consulta__validacion-estado
+{
+  color: #1ed12d;
+  opacity: 1;
+}
+
+.formulario__grupo-incorrecto .formulario__validacion-estado,
+.consulta__grupo-incorrecto .consulta__validacion-estado{
+  color: #bb2929;
+  opacity: 1;
+}
+
+.formulario__grupo-incorrecto .formulario__input,
+.consulta__grupo-incorrecto .consulta__input{
+  border: 3px solid #bb2929;
+}
+
 
 @media all and (max-width: 600px) {
   .navbar {
