--- a/css/styles.css
+++ b/css/styles.css
@@ -852,11 +852,183 @@ header, .navbar{
 
 /* end tarjetas perros gatos */
 
-/* tarjetas adoptados */
+/* tarjetas rescatados y adoptados */
+
+.main {
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(6, 1fr);
+}
+
+.text{
+  margin: 30px;
+  font-size: large;
+}
+
+.maquetado-a{
+  background-color: #7c07c0;
+  color: white;
+  grid-column: 1/3;
+  text-align: justify;
+  height: 375px;
+  margin: 10px;
+  padding: 10px;
+}
+
+
+.maquetado-b{
+  background-color: gray;
+  grid-column: 1/3;
+  text-align: left;
+  height: 375px;
+  display: inline-flex;
+  margin: 10px;
+  font-size: medium;
+}
+
+.sub-a{
+  background-color: #c293eea6;
+  height: 375px;
+  width: 50%;
+}
+
+.sub-b{
+  background-color: #c293eea6;
+  height: 375px;
+  width: 50%;
+  padding: 10px;
+  text-align: center;
+  padding-right: 30px;
+ 
+}
+
+.maquetado-c{
+  background-color: gray;
+  grid-column: 1/2;
+  text-align: justify;
+  height: 375px;
+  border-radius: 5%;
+  padding: 20px;
+  margin: 10px;
+}
+
+.maquetado-e{
+  background-color: #c293eea6;
+  grid-column: 2/3;
+  text-align: justify;
+  height: 375px;
+  border-radius: 5%;
+  margin: 10px;
+}
+
+.maquetado-f{
+  background-color: #c293eea6;
+  grid-column: 1/3;
+  text-align: justify;
+  height: 375px;
+  display: inline-flex;
+  font-size: small;
+  text-align: center;
+  margin: 10px;
+}
+
+.final{
+  background-color:  #7c07c0;
+  color: white;
+  grid-column: 1/3;
+  grid-row: 5/7;
+  border-radius: 5%;
+  padding: 40px;
+  margin: 10px;
+  font-size: large;
+  text-align: justify;
+}
+
+
+.textoprincipal{
+  margin: 50px;
+  margin-top: 5px;
+  font-size:large;
+  text-align: justify;
+}
+
+.textosegundo{
+  margin: 20px;
+  margin-top: 10px;
+  text-align: justify;
+  font-size: medium;
+}
+
+h3{
+  text-align: center;
+}
+
+.foto{
+  margin-top: 60px;
+}
+
+.maquetado{/*Contenedor Principal*/
+  background-color: #e9def3;
+  width: 650px;
+  height: 850px;
+  border: 1px solid white;
+  text-align: justify;
+}
+
+.textocontenedor2{
+  width: 600px;
+  margin-left: 20px;
+}
+
+h2{
+ text-align: center;
+ color: gray;
+}
 
 
 
-/* end tarjetas adoptados */
+
+img{
+  background-color: white;
+  width: 250px;
+  height: 275px;
+  margin-top: 15px;
+  margin-left: 50px;
+  background-size: cover;
+  border: 10px solid white ;
+  border-radius: 50%;
+}
+
+iframe{
+  border-radius: 5%;
+}
+
+.ubication{
+  display: inline;
+}
+.primertitle{
+  color: gray;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.adoptame{
+  text-align: center;
+}
+
+.textocontenedor{
+  width: 300px;
+  margin-left: 20px;
+
+}
+
+.centrar{
+  margin-left: 70px;
+}
+
+
+/* end tarjetas rescatados y adoptados */
 
 /* faq */
 
