--- a/css/styles.css
+++ b/css/styles.css
@@ -368,104 +368,6 @@ footer{
 
 /* end footer */
 
-/* nosotros */
-
-.refugios-img{
-  display: flex;
-  flex-basis: 50%;
-  justify-content: space-evenly;
-  flex-wrap: wrap;
-  padding: 2%;
-}
-
-.content-center{
-  text-align: center;
-}
-
-.nosotros-img{
-  object-fit: cover;
-  border-radius: 10%;
-  margin: 2%;
-}
-
-.mapas{
-  width: 100% !important;
-  display: flex;
-  flex-basis: 30%;
-  justify-content: center;
-  flex-wrap: wrap;
-  padding: 2% 0%;
-}
-
-.mapas iframe{
-  margin: 2%;
-}
-
-@media screen and (max-width: 900px) {
-  .refugios-img{
-    position: relative;
-    flex-wrap: wrap;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .nosotros-img{
-    width: 60%;
-  }
-  
-}
-
-/* end nosotros */
-
-/* home */
-
-h1{
-  font-weight: bold;
-}
-
-.grid-container{
-  display: grid;
-  background-color: whitesmoke;
-  grid-template-columns: auto auto auto;
-}
-
-.grid-container div{
-  background-color: var(--fifth-brand-color);
-  border: 1px solid whitesmoke;
-  text-align: center;
-  margin: 3px;
-  height: 425px;
-  width: 437px;
-  color: whitesmoke;
-}
-
-.imagen1{
-  background-image: url(../img/home/perros.webp);
-  background-size: cover;
-}
-
-.imagen2{
-  background-image: url(../img/home/gatos.jpg);
-  background-size: cover;
-}
-
-.imagen3{
-  background-image: url(../img/home/rescatados.jpg);
-  background-size: cover;
-}
-
-.nav1{
-  color: whitesmoke;
-  border-radius: 10px;
-  font-size: 1.5vw;
-  text-decoration: none;
-  left: 1;
-  text-align: right;
-  padding: 5px;
-}
-
-/* end home */
-
 /* header */
 
 header, .navbar{
@@ -473,7 +375,7 @@ header, .navbar{
   margin-bottom: 90px !important;
 }
 
-.navbar{ /*el conjunto de icono y links en el header*/
+.navbar{
   background-color: var(--first-brand-color);
   color: black;
   display: flex;
@@ -487,7 +389,7 @@ header, .navbar{
   z-index: 1;
 }
 
-.primary-icon{ /*solo el icono*/
+.primary-icon{
   height: 45px;
 }
 
@@ -510,14 +412,14 @@ header, .navbar{
   cursor: pointer;
 }
 
-.list-item a:hover { /*cuando apoyas el cursor sobre el link a algun lado*/
+.list-item a:hover {
   color: black;
   padding: 5px;
   margin: -5px;
 }
 
 .menu{
-  display: none;/*reemplazar menu por active*/
+  display: none;
 }
 
 .menu-line{
@@ -527,7 +429,6 @@ header, .navbar{
   margin-bottom: 4px;
 }
 
-/*esto empieza con las tabs*/
 .container{
   width: 30em;
   position: relative;
@@ -587,6 +488,55 @@ header, .navbar{
 
 /* end header */
 
+/* nosotros */
+
+.refugios-img{
+  display: flex;
+  flex-basis: 50%;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  padding: 2%;
+}
+
+.content-center{
+  text-align: center;
+}
+
+.nosotros-img{
+  object-fit: cover;
+  border-radius: 10%;
+  margin: 2%;
+}
+
+.mapas{
+  width: 100% !important;
+  display: flex;
+  flex-basis: 30%;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 2% 0%;
+}
+
+.mapas iframe{
+  margin: 2%;
+}
+
+@media screen and (max-width: 900px) {
+  .refugios-img{
+    position: relative;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .nosotros-img{
+    width: 60%;
+  }
+  
+}
+
+/* end nosotros */
+
 /* contacto */
 
 .field{
@@ -612,7 +562,6 @@ header, .navbar{
   margin-top: 0;
 }
 
-/*input y textarea*/
 .field input{
   padding: 0.5em;
   border: solid 1px var(--fourth-brand-color);
@@ -666,13 +615,13 @@ header, .navbar{
   border: 3px solid var(--fourth-brand-color);
   outline: none;
 }
-/*saca la ruedita del imput numero en el navegador Chrome, Safari, Edge y Opera */
+
 .field input::-webkit-outer-spin-button,
 .field input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
-/*saca la ruedita del imput numero en el navegador Firefox */
+
 .field input[type=number] {
   -moz-appearance: textfield;
 }
@@ -680,7 +629,6 @@ header, .navbar{
   background-color: var(--second-brand-color);
 }
 
-/*estilizacion de los mensajes de errores*/
 .formulario__grupo-input,
 .consulta__grupo-input {
   position: relative;
@@ -802,234 +750,6 @@ header, .navbar{
 
 /* end contacto /*
 
-/* tarjetas perros gatos */
-
-.contenedorgrid{
-  display: grid;
-  grid-template-columns: auto auto auto auto;
-  grid-template-rows: auto auto;
-}
-
-.principal{/*Contenedor Principal*/
-  background-color: #e9def3;
-  width: 330px;
-  border: 1px solid whitesmoke;
-}
-
-.principal img{
-  background-color: whitesmoke;
-  width: 250px;
-  height: 250px;
-  margin-top: 15px;
-  margin-left: 50px;
-  background-size: cover;
-  border: 10px solid whitesmoke;
-  border-radius: 50%;
-}
-
-.principal h2{
-  text-align: center;
-}
-
-.principal p{
-  text-align: center;
-}
-
-.primertitle{
-  color: gray;
-  text-align: center;
-  text-transform: uppercase;
-}
-
-.textocontenedor{
-  width: 300px;
-  margin-left: 20px;
-}
-
-.centrar{
-  margin-left: 110px;
-}
-
-/* end tarjetas perros gatos */
-
-/* tarjetas rescatados y adoptados */
-
-.main {
-  display: grid;
-  grid-gap: 10px;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(6, 1fr);
-}
-
-.text{
-  margin: 30px;
-  font-size: large;
-}
-
-.maquetado-a{
-  background-color: #7c07c0;
-  color: white;
-  grid-column: 1/3;
-  text-align: justify;
-  height: 375px;
-  margin: 10px;
-  padding: 10px;
-}
-
-
-.maquetado-b{
-  background-color: gray;
-  grid-column: 1/3;
-  text-align: left;
-  height: 375px;
-  display: inline-flex;
-  margin: 10px;
-  font-size: medium;
-}
-
-.sub-a{
-  background-color: #c293eea6;
-  height: 375px;
-  width: 50%;
-}
-
-.sub-b{
-  background-color: #c293eea6;
-  height: 375px;
-  width: 50%;
-  padding: 10px;
-  text-align: center;
-  padding-right: 30px;
- 
-}
-
-.maquetado-c{
-  background-color: gray;
-  grid-column: 1/2;
-  text-align: justify;
-  height: 375px;
-  border-radius: 5%;
-  padding: 20px;
-  margin: 10px;
-}
-
-.maquetado-e{
-  background-color: #c293eea6;
-  grid-column: 2/3;
-  text-align: justify;
-  height: 375px;
-  border-radius: 5%;
-  margin: 10px;
-}
-
-.maquetado-f{
-  background-color: #c293eea6;
-  grid-column: 1/3;
-  text-align: justify;
-  height: 375px;
-  display: inline-flex;
-  font-size: small;
-  text-align: center;
-  margin: 10px;
-}
-
-.final{
-  background-color:  #7c07c0;
-  color: white;
-  grid-column: 1/3;
-  grid-row: 5/7;
-  border-radius: 5%;
-  padding: 40px;
-  margin: 10px;
-  font-size: large;
-  text-align: justify;
-}
-
-
-.textoprincipal{
-  margin: 50px;
-  margin-top: 5px;
-  font-size:large;
-  text-align: justify;
-}
-
-.textosegundo{
-  margin: 20px;
-  margin-top: 10px;
-  text-align: justify;
-  font-size: medium;
-}
-
-h3{
-  text-align: center;
-}
-
-.foto{
-  margin-top: 60px;
-}
-
-.maquetado{/*Contenedor Principal*/
-  background-color: #e9def3;
-  width: 650px;
-  height: 850px;
-  border: 1px solid white;
-  text-align: justify;
-}
-
-.textocontenedor2{
-  width: 600px;
-  margin-left: 20px;
-}
-
-h2{
- text-align: center;
- color: gray;
-}
-
-
-
-
-img{
-  background-color: white;
-  width: 250px;
-  height: 275px;
-  margin-top: 15px;
-  margin-left: 50px;
-  background-size: cover;
-  border: 10px solid white ;
-  border-radius: 50%;
-}
-
-iframe{
-  border-radius: 5%;
-}
-
-.ubication{
-  display: inline;
-}
-.primertitle{
-  color: gray;
-  text-align: center;
-  text-transform: uppercase;
-}
-
-.adoptame{
-  text-align: center;
-}
-
-.textocontenedor{
-  width: 300px;
-  margin-left: 20px;
-
-}
-
-.centrar{
-  margin-left: 70px;
-}
-
-
-/* end tarjetas rescatados y adoptados */
-
 /* faq */
 
 .qa {
@@ -1130,7 +850,6 @@ iframe{
   
 }
 
-
 /* end faq */
 
 /* requisitos de adopcion */
@@ -1138,3 +857,239 @@ iframe{
 
 
 /* end requisitos de adopcion */
+
+/* home */
+
+.contenedorgrid{
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  grid-template-rows: auto auto;
+}
+
+.principal{
+  background-color: #e9def3;
+  width: 330px;
+  border: 1px solid whitesmoke;
+}
+
+.principal img{
+  background-color: whitesmoke;
+  width: 250px;
+  height: 250px;
+  margin-top: 15px;
+  margin-left: 50px;
+  background-size: cover;
+  border: 10px solid whitesmoke;
+  border-radius: 50%;
+}
+
+.principal h2{
+  text-align: center;
+}
+
+.principal p{
+  text-align: center;
+}
+
+.primertitle{
+  color: gray;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.textocontenedor{
+  width: 300px;
+  margin-left: 20px;
+}
+
+.centrar{
+  margin-left: 110px;
+}
+
+.grid-container{
+  display: grid;
+  background-color: whitesmoke;
+  grid-template-columns: auto auto auto;
+}
+
+.grid-container div{
+  background-color: var(--fifth-brand-color);
+  border: 1px solid whitesmoke;
+  text-align: center;
+  margin: 3px;
+  height: 425px;
+  width: 437px;
+  color: whitesmoke;
+}
+
+.imagen1{
+  background-image: url(../img/home/perros.webp);
+  background-size: cover;
+}
+
+.imagen2{
+  background-image: url(../img/home/gatos.jpg);
+  background-size: cover;
+}
+
+.imagen3{
+  background-image: url(../img/home/rescatados.jpg);
+  background-size: cover;
+}
+
+.nav1{
+  color: whitesmoke;
+  border-radius: 10px;
+  font-size: 1.5vw;
+  text-decoration: none;
+  left: 1;
+  text-align: right;
+  padding: 5px;
+}
+
+.main {
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(6, 1fr);
+}
+
+.maquetado-a{
+  background-color: #7c07c0;
+  color: white;
+  grid-column: 1/3;
+  text-align: justify;
+  height: 375px;
+  margin: 10px;
+  padding: 10px;
+}
+
+.maquetado-b{
+  background-color: gray;
+  grid-column: 1/3;
+  text-align: left;
+  height: 375px;
+  display: inline-flex;
+  margin: 10px;
+  font-size: medium;
+}
+
+.sub-a{
+  background-color: #c293eea6;
+  height: 375px;
+  width: 50%;
+}
+
+.sub-b{
+  background-color: #c293eea6;
+  height: 375px;
+  width: 50%;
+  padding: 10px;
+  text-align: center;
+  padding-right: 30px;
+}
+
+.maquetado-c{
+  background-color: gray;
+  grid-column: 1/2;
+  text-align: justify;
+  height: 375px;
+  border-radius: 5%;
+  padding: 20px;
+  margin: 10px;
+}
+
+.maquetado-e{
+  background-color: #c293eea6;
+  grid-column: 2/3;
+  text-align: justify;
+  height: 375px;
+  border-radius: 5%;
+  margin: 10px;
+}
+
+.maquetado-f{
+  background-color: #c293eea6;
+  grid-column: 1/3;
+  text-align: justify;
+  height: 375px;
+  display: inline-flex;
+  font-size: small;
+  text-align: center;
+  margin: 10px;
+}
+
+.final{
+  background-color:  #7c07c0;
+  color: white;
+  grid-column: 1/3;
+  grid-row: 5/7;
+  border-radius: 5%;
+  padding: 40px;
+  margin: 10px;
+  font-size: large;
+  text-align: justify;
+}
+
+.textoprincipal{
+  margin: 50px;
+  margin-top: 5px;
+  font-size:large;
+  text-align: justify;
+}
+
+.textosegundo{
+  margin: 20px;
+  margin-top: 10px;
+  text-align: justify;
+  font-size: medium;
+}
+
+.foto{
+  margin-top: 60px;
+}
+
+.maquetado{
+  background-color: #e9def3;
+  width: 650px;
+  height: 850px;
+  border: 1px solid white;
+  text-align: justify;
+}
+
+.textocontenedor2{
+  width: 600px;
+  margin-left: 20px;
+}
+
+.adoptados img{
+  background-color: white;
+  width: 250px;
+  height: 275px;
+  margin-top: 15px;
+  margin-left: 50px;
+  background-size: cover;
+  border: 10px solid white ;
+  border-radius: 50%;
+}
+
+.adoptados iframe{
+  border-radius: 5%;
+}
+
+.primertitle{
+  color: gray;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.textocontenedor{
+  width: 300px;
+  margin-left: 20px;
+}
+
+.centrar{
+  margin-left: 70px;
+}
+
+/* end home */
