--- a/css/styles.css
+++ b/css/styles.css
@@ -143,6 +143,7 @@ html {
   color: var(--second-brand-color);
   font-weight: bold;
   font-size: 1.5rem;
+  margin: 12px 0px;
 }
 
 .text {
@@ -402,6 +403,11 @@ header, .navbar{
   height: 45px;
 }
 
+.secondary-icon{
+  height: 35px;
+  margin-left: 5px;
+}
+
 .nav-list{
   list-style-type: none;
 }
@@ -515,6 +521,10 @@ header, .navbar{
   object-fit: cover;
   border-radius: 10%;
   margin: 2%;
+}
+
+.vet-list {
+  margin-left: 5%;
 }
 
 .mapas{
@@ -715,6 +725,16 @@ header, .navbar{
   border: 3px solid #bb2929;
 }
 
+@media all and (max-width: 800px) {
+  .primary-icon{
+    margin-top: 8px;
+    margin-left: 15px;
+    margin-bottom: 8px;
+  }
+  .secondary-icon{
+    display: none;
+  }
+}
 
 @media all and (max-width: 600px) {
   .navbar {
@@ -747,10 +767,16 @@ header, .navbar{
   }
   
   .primary-icon{
-    margin-top: 10px;
+    margin-top: 8px;
     margin-left: 10px;
+    margin-bottom: 8px;
   }
   
+  .secondary-icon{
+    display: inline-block;
+    margin-left: 10px;
+  }
+
   .active{
     display: block;
   }
@@ -876,7 +902,7 @@ header, .navbar{
 }
 
 .principal{
-  background-color: #e9def3;
+  background-color: var(--third-brand-color);
   width: 330px;
   border: 1px solid whitesmoke;
 }
@@ -964,8 +990,8 @@ header, .navbar{
 }
 
 .maquetado-a{
-  background-color: #7c07c0;
-  color: white;
+  background-color: var(--second-brand-color);
+  color: whitesmoke;
   grid-column: 1/3;
   text-align: justify;
   height: 375px;
@@ -974,7 +1000,7 @@ header, .navbar{
 }
 
 .maquetado-b{
-  background-color: gray;
+  background-color: var(--seventh-brand-color);
   grid-column: 1/3;
   text-align: left;
   height: 375px;
@@ -984,13 +1010,13 @@ header, .navbar{
 }
 
 .sub-a{
-  background-color: #c293eea6;
+  background-color: var(--third-brand-color);
   height: 375px;
   width: 50%;
 }
 
 .sub-b{
-  background-color: #c293eea6;
+  background-color: var(--sixth-brand-color);
   height: 375px;
   width: 50%;
   padding: 10px;
@@ -999,17 +1025,16 @@ header, .navbar{
 }
 
 .maquetado-c{
-  background-color: gray;
+  background-color: var(--seventh-brand-color);
   grid-column: 1/2;
   text-align: justify;
   height: 375px;
-  border-radius: 5%;
   padding: 20px;
   margin: 10px;
 }
 
 .maquetado-e{
-  background-color: #c293eea6;
+  background-color: var(--fifth-brand-color);
   grid-column: 2/3;
   text-align: justify;
   height: 375px;
@@ -1018,7 +1043,7 @@ header, .navbar{
 }
 
 .maquetado-f{
-  background-color: #c293eea6;
+  background-color: var(--sixth-brand-color);
   grid-column: 1/3;
   text-align: justify;
   height: 375px;
@@ -1029,21 +1054,20 @@ header, .navbar{
 }
 
 .final{
-  background-color:  #7c07c0;
-  color: white;
+  background-color: var(--seventh-brand-color);
+  color: black;
   grid-column: 1/3;
   grid-row: 5/7;
-  border-radius: 5%;
   padding: 40px;
   margin: 10px;
-  font-size: large;
+  font-size: small;
   text-align: justify;
 }
 
 .textoprincipal{
   margin: 50px;
   margin-top: 5px;
-  font-size:large;
+  font-size:medium;
   text-align: justify;
 }
 
@@ -1059,10 +1083,10 @@ header, .navbar{
 }
 
 .maquetado{
-  background-color: #e9def3;
+  background-color: whitesmoke;
   width: 650px;
   height: 850px;
-  border: 1px solid white;
+  border: 1px solid whitesmoke;
   text-align: justify;
 }
 
@@ -1072,18 +1096,14 @@ header, .navbar{
 }
 
 .adoptados img{
-  background-color: white;
+  background-color: whitesmoke;
   width: 250px;
   height: 275px;
   margin-top: 15px;
   margin-left: 50px;
   background-size: cover;
-  border: 10px solid white ;
+  border: 10px solid whitesmoke ;
   border-radius: 50%;
-}
-
-.adoptados iframe{
-  border-radius: 5%;
 }
 
 .primertitle{
