add adoption contract section into contact page

--- a/css/styles.css
+++ b/css/styles.css
@@ -509,6 +509,7 @@ header, .navbar{
 .formularios{
   width: 58%;
   margin-right: 2%;
+  background-color: var(--fifth-brand-color);
 }
 
 .contacto aside {
@@ -533,6 +534,33 @@ header, .navbar{
 .contacto aside .requisitos-text b{
   margin-top: 2%;
   margin-bottom: 2%;
+  font-size: 0.9rem;
+}
+
+.contacto .contrato {
+  background-color: var(--third-brand-color);
+  padding: 2%;
+  text-align: justify;
+  display: grid;
+  margin-top: 2%;
+}
+
+.contacto .contrato .contrato-title{
+  font-size: 0.9rem;
+  font-weight: bold;
+  text-align: center;
+  color: var(--fourth-brand-color);
+  margin-bottom: 2%;
+}
+
+.contacto .contrato .contrato-text {
+  display: grid;
+  font-size: 0.8rem;
+}
+
+.contacto .contrato .contrato-text b{
+  margin-top: 1%;
+  margin-bottom: 1%;
   font-size: 0.9rem;
 }
 
